--- a/main.css
+++ b/main.css
@@ -1,121 +1,163 @@
+*, *::before, *::after {
+    font-family: 'Roboto';
+}
+
 body {
-    font-family: "Open Sans", sans-serif;
-    background-color: #161515;
+    background-image: url(img/wallpapermtn.png);
+    background-repeat: no-repeat;
 }
 
 .panel {
     margin: 0 auto;
-    padding: 0;
     margin-top: 100px;
-    background-color: #1a1f2b;
-    border-radius: 2px;
 }
 
-
-.calculator-section {
+.left-panel {
     margin: 0 auto;
-    margin-top: 115px;
-    margin-bottom: 105px;
+    background: #ffffff;
+    border-radius: 4px;
+    height: 400px;
+    box-shadow: 0 0 20px 5px #0000002a;
+    z-index: 1;
 }
 
-.calculator-section h2 {
-    text-align: center;
-    color:#e1e1e1;
-    font-size: 25px;
-    font-weight: lighter;
+.right-panel {
+    height: 410px;
+    margin-top: 20px;
+    padding: 10px 20px 20px 30px;
+    left: -110px;
+    background: linear-gradient(#0f62bd 24%, #0a407a 168%);
+    border-radius: 4px;
+    box-shadow: 0 0 5px #0000002a;
 }
 
-.calculator-section input[type="number"], input[type="text"], .calculator-section #usd_quantity {
-    background-color: #00000067;
-    color: #ffffff;
-    border-color:transparent;
-    border-radius: 0px;
+.right-panel .input-group-text i {
+    font-size: 18px;
 }
 
-.calculator-section input[type="text"]:focus {
-    background-color: #00000067;
-    color: #ffffff;
-    border: 1px solid transparent;
-}
-
-.calculator-section .input-group-btn, .calculator-section .input-group-text {
-    background-color: #303a50;
-    color: #ffffff;
+nav {
+    margin-top: 10px;
+    margin-bottom: 20px;
     border: 1px solid transparent;
     border-radius: 0px;
 }
-
-.form-section { 
-    background-color: #252d47;
-    padding: 10px;
-}
-
-.nav-tab-title {
-    color: #e1e1e1;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
 .nav, .nav-tabs a {
-    background-color: #1a1f2b;
+    background-color: #00000018;
     font-size: 12px;
     border-color: transparent;
     border-radius: 0px;
-    color: #e1e1e1;
+    color: #ffffff;
 }
+
 
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus ,a:active{
-    border: 1px solid #e1e1e1;
-    border-top: 3px solid #e1e1e1;
-    border-bottom: 1px solid transparent;
-    background-color: #252d47d0;
+    background-color: #ffffff;
     border-radius: 0px;
-    color: #e1e1e1;
-
+    border: 2px solid #0f62bd;
+    
+    color: #000000;
 }
 
-.tab-content {
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 35px;
+.right-panel .tab-content {
+    margin: 0px 50px;
 }
 
-.form-section input[type="text"], input[type="password"], input[type="number"] {
-    color: #ffffff;
-    background-color: #00000067;
-    border: 1px solid transparent;
+.right-panel .btn {
+    background-color: #00000069;
     border-radius: 0px;
+    border-color: transparent;
+    width: 200px;
 }
 
-.form-section input[type="text"]:focus, input[type="password"]:focus, input[type="number"]:focus {
-    color: #ffffff;
-    background-color: #00000067;
-    border: 1px solid transparent;
-    border-radius: 0px;
+.right-panel .btn:hover {
+    background-color: #ffffff;
+    color: #000000;
 }
 
-.form-section .input-group-text {
-    color: #e1e1e1;
-    border: 1px solid transparent;
-    background-color: #303a50;
+.text-center {
+    color: white;
 }
 
-.lostpw-form-section h3 {
-    color: #e1e1e1;
+.left-panel .header {
+    margin-top: 40px;
+    text-align: center;
+    color: #0f62bd;
     font-size: 20px;
-    font-weight: lighter;
+}
+
+.left-panel .calculator {
+    margin: 0 auto;
+    margin-top: 40px;
+}
+
+.left-panel .calculator h5 {
     text-align: center;
+    font-weight: 200;
 }
 
-.lostpw-form-section sub{
-    color: #e1e1e1;
-    text-align: center;
+.left-panel input[type="text"], .left-panel input[type="text"]:focus, .left-panel input[type="number"], .left-panel input[type="number"]:focus, .left-panel input[type="text"]::placeholder, .left-panel input[type="number"]::placeholder, .calculator #usd_quantity::placeholder{
+    color: #000000;
+    background-color: #ffffff;
 }
 
-.lostpw-form-section hr {
-    background: #e1e1e1;
+.left-panel .calculator .input-group-btn {
+    background-color: #0f62bd;
+    border: 1px solid transparent;
+    border-radius: 0;
+    box-shadow: 0 0 0 ;
+    color: #ffffff;
 }
 
-.lostpw-form-section input {
-    margin-bottom: 15px;
+.logo {
+    margin: 0 auto;
+}
+
+.logo img{
+    position: absolute;
+    height: 50px;
+    left: 160px;
+    bottom: 435px;
+    z-index: 1;
+}
+
+.right-panel input{
+    background-color: transparent;
+    border-top: transparent;
+    border-right: transparent;
+    color: #ffffff;
+}
+
+.right-panel input::placeholder {
+    color: #dbdbdb;
+}
+
+.right-panel .input-group-text {
+    background-color: #ffffff;
+    border-radius: 0px;
+    border-color: transparent;
+    color: #0f62bd; 
+}
+
+.right-panel input:focus {
+    background-color: transparent;
+    color: #ffffff;
+    border-bottom: transparent;
+    box-shadow: 0px 0px 10px 0px #ffffff;
+    border-radius: 0px;
+}
+
+.right-header {
+    margin-bottom: 20px; 
+    color: #ffffff;
+}
+
+.right-panel .right-footer a {
+    color: #ffffff;
+    font-size: 12px;
+}
+
+.right-footer .ext-links li{
+    display: inline-block;
+    margin-top: 100px;
+    list-style-type: none;
 }
